"resolved sonar issue"